Fixed problem with tooltips not displaying properly on small calendar

--- a/webroot/css/styles.css
+++ b/webroot/css/styles.css
@@ -630,7 +630,6 @@ Tooltip
 	color: #ffffff;
 	text-decoration: none;
 	float:left;
-	height:20px !important;
 	line-height:20px !important;
 	padding: 0 5px !important;
 	min-width: 80px;
